[gd_scene load_steps=19 format=3 uid="uid://c2wmcbc6o45bn"]

[ext_resource type="Texture2D" uid="uid://cfqfgygkxfo3q" path="res://textures/SimpleKeysItchio/Classic/Dark/Spritesheets/ARROWUP.png" id="1_1ubiu"]
[ext_resource type="Script" uid="uid://corux68jypv7f" path="res://scripts/Interaction/Chapter 1/ArrowButtonTutorial/arrow_buttons.gd" id="1_jhmw8"]
[ext_resource type="Texture2D" uid="uid://dfn0dv3l8qhj8" path="res://textures/SimpleKeysItchio/Classic/Dark/Spritesheets/ARROWDOWN.png" id="2_jhmw8"]
[ext_resource type="Texture2D" uid="uid://bk1dd10mm0olg" path="res://textures/SimpleKeysItchio/Classic/Dark/Spritesheets/ARROWLEFT.png" id="3_ynln7"]
[ext_resource type="Texture2D" uid="uid://ed2k5v8tmudx" path="res://textures/SimpleKeysItchio/Classic/Dark/Spritesheets/ARROWRIGHT.png" id="4_msqok"]
[ext_resource type="FontFile" uid="uid://hke21ckgccrf" path="res://textures/Fonts/superstar-memesbruh03/superstar_memesbruh03.ttf" id="5_ohibv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fpgkm"]
atlas = ExtResource("1_1ubiu")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h3qm"]
atlas = ExtResource("1_1ubiu")
region = Rect2(17, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5mx6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpgkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h3qm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xqrl0"]
atlas = ExtResource("2_jhmw8")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g00tp"]
atlas = ExtResource("2_jhmw8")
region = Rect2(17, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tflj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqrl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g00tp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mxxhw"]
atlas = ExtResource("3_ynln7")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iynse"]
atlas = ExtResource("3_ynln7")
region = Rect2(17, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_23tln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxxhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iynse")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5k0j"]
atlas = ExtResource("4_msqok")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxo7y"]
atlas = ExtResource("4_msqok")
region = Rect2(17, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vl8yj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5k0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxo7y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ArrowButtons" type="Node2D"]
script = ExtResource("1_jhmw8")

[node name="UpArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_5mx6x")
frame_progress = 0.620682

[node name="DownArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 9)
sprite_frames = SubResource("SpriteFrames_tflj0")

[node name="LeftArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(-19, 9)
sprite_frames = SubResource("SpriteFrames_23tln")

[node name="RightArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(19, 9)
sprite_frames = SubResource("SpriteFrames_vl8yj")

[node name="Label" type="Label" parent="."]
offset_left = -66.0
offset_top = 21.0
offset_right = 67.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("5_ohibv")
text = "Arrow Keys to Move"
